pkgs/cupertino_http/lib/src/cronet.dart


  /// Abstract interface Cronet_RequestFinishedInfoListener is implemented by the
  /// app. The following concrete methods forward call to app implementation. The
  /// app doesn't normally call them.
  void Cronet_RequestFinishedInfoListener_OnRequestFinished(
    Cronet_RequestFinishedInfoListenerPtr self,
    Cronet_RequestFinishedInfoPtr request_info,
    Cronet_UrlResponseInfoPtr response_info,
    Cronet_ErrorPtr error,
  ) {
    return _Cronet_RequestFinishedInfoListener_OnRequestFinished(
      self,
      request_info,
      response_info,
      error,
    );
  }

  late final _Cronet_RequestFinishedInfoListener_OnRequestFinishedPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_RequestFinishedInfoListenerPtr,
                  Cronet_RequestFinishedInfoPtr,
                  Cronet_UrlResponseInfoPtr,
                  Cronet_ErrorPtr)>>(
      'Cronet_RequestFinishedInfoListener_OnRequestFinished');
  late final _Cronet_RequestFinishedInfoListener_OnRequestFinished =
      _Cronet_RequestFinishedInfoListener_OnRequestFinishedPtr.asFunction<
          void Function(
              Cronet_RequestFinishedInfoListenerPtr,
              Cronet_RequestFinishedInfoPtr,
              Cronet_UrlResponseInfoPtr,
              Cronet_ErrorPtr)>();

  /// The app creates an instance of Cronet_RequestFinishedInfoListener by
  /// providing custom functions for each method.
  Cronet_RequestFinishedInfoListenerPtr
      Cronet_RequestFinishedInfoListener_CreateWith(
    Cronet_RequestFinishedInfoListener_OnRequestFinishedFunc
        OnRequestFinishedFunc,
  ) {
    return _Cronet_RequestFinishedInfoListener_CreateWith(
      OnRequestFinishedFunc,
    );
  }

  late final _Cronet_RequestFinishedInfoListener_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_RequestFinishedInfoListenerPtr Function(
                  Cronet_RequestFinishedInfoListener_OnRequestFinishedFunc)>>(
      'Cronet_RequestFinishedInfoListener_CreateWith');
  late final _Cronet_RequestFinishedInfoListener_CreateWith =
      _Cronet_RequestFinishedInfoListener_CreateWithPtr.asFunction<
          Cronet_RequestFinishedInfoListenerPtr Function(
              Cronet_RequestFinishedInfoListener_OnRequestFinishedFunc)>();

  /// ////////////////////
  /// Struct Cronet_Error.
  Cronet_ErrorPtr Cronet_Error_Create() {
    return _Cronet_Error_Create();
  }

  late final _Cronet_Error_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_ErrorPtr Function()>>(
          'Cronet_Error_Create');
  late final _Cronet_Error_Create =
      _Cronet_Error_CreatePtr.asFunction<Cronet_ErrorPtr Function()>();

  void Cronet_Error_Destroy(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_Destroy(
      self,
    );
  }

  late final _Cronet_Error_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_Destroy');
  late final _Cronet_Error_Destroy =
      _Cronet_Error_DestroyPtr.asFunction<void Function(Cronet_ErrorPtr)>();

  /// Cronet_Error setters.
  void Cronet_Error_error_code_set(
    Cronet_ErrorPtr self,
    int error_code,
  ) {
    return _Cronet_Error_error_code_set(
      self,
      error_code,
    );
  }

  late final _Cronet_Error_error_code_setPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_ErrorPtr, ffi.Int32)>>(
      'Cronet_Error_error_code_set');
  late final _Cronet_Error_error_code_set = _Cronet_Error_error_code_setPtr
      .asFunction<void Function(Cronet_ErrorPtr, int)>();

  void Cronet_Error_message_set(
    Cronet_ErrorPtr self,
    Cronet_String message,
  ) {
    return _Cronet_Error_message_set(
      self,
      message,
    );
  }

  late final _Cronet_Error_message_setPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Cronet_ErrorPtr, Cronet_String)>>(
      'Cronet_Error_message_set');
  late final _Cronet_Error_message_set = _Cronet_Error_message_setPtr
      .asFunction<void Function(Cronet_ErrorPtr, Cronet_String)>();

  void Cronet_Error_internal_error_code_set(
    Cronet_ErrorPtr self,
    int internal_error_code,
  ) {
    return _Cronet_Error_internal_error_code_set(
      self,
      internal_error_code,
    );
  }

  late final _Cronet_Error_internal_error_code_setPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_ErrorPtr, ffi.Int32)>>(
      'Cronet_Error_internal_error_code_set');
  late final _Cronet_Error_internal_error_code_set =
      _Cronet_Error_internal_error_code_setPtr.asFunction<
          void Function(Cronet_ErrorPtr, int)>();

  void Cronet_Error_immediately_retryable_set(
    Cronet_ErrorPtr self,
    bool immediately_retryable,
  ) {
    return _Cronet_Error_immediately_retryable_set(
      self,
      immediately_retryable,
    );
  }

  late final _Cronet_Error_immediately_retryable_setPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_ErrorPtr, ffi.Bool)>>(
          'Cronet_Error_immediately_retryable_set');
  late final _Cronet_Error_immediately_retryable_set =
      _Cronet_Error_immediately_retryable_setPtr.asFunction<
          void Function(Cronet_ErrorPtr, bool)>();

  void Cronet_Error_quic_detailed_error_code_set(
    Cronet_ErrorPtr self,
    int quic_detailed_error_code,
  ) {
    return _Cronet_Error_quic_detailed_error_code_set(
      self,
      quic_detailed_error_code,
    );
  }

  late final _Cronet_Error_quic_detailed_error_code_setPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_ErrorPtr, ffi.Int32)>>(
      'Cronet_Error_quic_detailed_error_code_set');
  late final _Cronet_Error_quic_detailed_error_code_set =
      _Cronet_Error_quic_detailed_error_code_setPtr.asFunction<
          void Function(Cronet_ErrorPtr, int)>();

  /// Cronet_Error getters.
  int Cronet_Error_error_code_get(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_error_code_get(
      self,
    );
  }

  late final _Cronet_Error_error_code_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_error_code_get');
  late final _Cronet_Error_error_code_get = _Cronet_Error_error_code_getPtr
      .asFunction<int Function(Cronet_ErrorPtr)>();

  Cronet_String Cronet_Error_message_get(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_message_get(
      self,
    );
  }

  late final _Cronet_Error_message_getPtr =
      _lookup<ffi.NativeFunction<Cronet_String Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_message_get');
  late final _Cronet_Error_message_get = _Cronet_Error_message_getPtr
      .asFunction<Cronet_String Function(Cronet_ErrorPtr)>();

  int Cronet_Error_internal_error_code_get(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_internal_error_code_get(
      self,
    );
  }

  late final _Cronet_Error_internal_error_code_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_internal_error_code_get');
  late final _Cronet_Error_internal_error_code_get =
      _Cronet_Error_internal_error_code_getPtr.asFunction<
          int Function(Cronet_ErrorPtr)>();

  bool Cronet_Error_immediately_retryable_get(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_immediately_retryable_get(
      self,
    );
  }

  late final _Cronet_Error_immediately_retryable_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_immediately_retryable_get');
  late final _Cronet_Error_immediately_retryable_get =
      _Cronet_Error_immediately_retryable_getPtr.asFunction<
          bool Function(Cronet_ErrorPtr)>();

  int Cronet_Error_quic_detailed_error_code_get(
    Cronet_ErrorPtr self,
  ) {
    return _Cronet_Error_quic_detailed_error_code_get(
      self,
    );
  }

  late final _Cronet_Error_quic_detailed_error_code_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_ErrorPtr)>>(
          'Cronet_Error_quic_detailed_error_code_get');
  late final _Cronet_Error_quic_detailed_error_code_get =
      _Cronet_Error_quic_detailed_error_code_getPtr.asFunction<
          int Function(Cronet_ErrorPtr)>();

  /// ////////////////////
  /// Struct Cronet_QuicHint.
  Cronet_QuicHintPtr Cronet_QuicHint_Create() {
    return _Cronet_QuicHint_Create();
  }

  late final _Cronet_QuicHint_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_QuicHintPtr Function()>>(
          'Cronet_QuicHint_Create');
  late final _Cronet_QuicHint_Create =
      _Cronet_QuicHint_CreatePtr.asFunction<Cronet_QuicHintPtr Function()>();

  void Cronet_QuicHint_Destroy(
    Cronet_QuicHintPtr self,
  ) {
    return _Cronet_QuicHint_Destroy(
      self,
    );
  }

  late final _Cronet_QuicHint_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_QuicHintPtr)>>(
          'Cronet_QuicHint_Destroy');
  late final _Cronet_QuicHint_Destroy = _Cronet_QuicHint_DestroyPtr.asFunction<
      void Function(Cronet_QuicHintPtr)>();

  /// Cronet_QuicHint setters.
  void Cronet_QuicHint_host_set(
    Cronet_QuicHintPtr self,
    Cronet_String host,
  ) {
    return _Cronet_QuicHint_host_set(
      self,
      host,
    );
  }

  late final _Cronet_QuicHint_host_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_QuicHintPtr, Cronet_String)>>('Cronet_QuicHint_host_set');
  late final _Cronet_QuicHint_host_set = _Cronet_QuicHint_host_setPtr
      .asFunction<void Function(Cronet_QuicHintPtr, Cronet_String)>();

  void Cronet_QuicHint_port_set(
    Cronet_QuicHintPtr self,
    int port,
  ) {
    return _Cronet_QuicHint_port_set(
      self,
      port,
    );
  }

  late final _Cronet_QuicHint_port_setPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_QuicHintPtr, ffi.Int32)>>(
      'Cronet_QuicHint_port_set');
  late final _Cronet_QuicHint_port_set = _Cronet_QuicHint_port_setPtr
      .asFunction<void Function(Cronet_QuicHintPtr, int)>();

  void Cronet_QuicHint_alternate_port_set(
    Cronet_QuicHintPtr self,
    int alternate_port,
  ) {
    return _Cronet_QuicHint_alternate_port_set(
      self,
      alternate_port,
    );
  }

  late final _Cronet_QuicHint_alternate_port_setPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_QuicHintPtr, ffi.Int32)>>(
      'Cronet_QuicHint_alternate_port_set');
  late final _Cronet_QuicHint_alternate_port_set =
      _Cronet_QuicHint_alternate_port_setPtr.asFunction<
          void Function(Cronet_QuicHintPtr, int)>();

  /// Cronet_QuicHint getters.
  Cronet_String Cronet_QuicHint_host_get(
    Cronet_QuicHintPtr self,
  ) {
    return _Cronet_QuicHint_host_get(
      self,
    );
  }

  late final _Cronet_QuicHint_host_getPtr =
      _lookup<ffi.NativeFunction<Cronet_String Function(Cronet_QuicHintPtr)>>(
          'Cronet_QuicHint_host_get');
  late final _Cronet_QuicHint_host_get = _Cronet_QuicHint_host_getPtr
      .asFunction<Cronet_String Function(Cronet_QuicHintPtr)>();

  int Cronet_QuicHint_port_get(
    Cronet_QuicHintPtr self,
  ) {
    return _Cronet_QuicHint_port_get(
      self,
    );
  }

  late final _Cronet_QuicHint_port_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_QuicHintPtr)>>(
          'Cronet_QuicHint_port_get');
  late final _Cronet_QuicHint_port_get = _Cronet_QuicHint_port_getPtr
      .asFunction<int Function(Cronet_QuicHintPtr)>();

  int Cronet_QuicHint_alternate_port_get(
    Cronet_QuicHintPtr self,
  ) {
    return _Cronet_QuicHint_alternate_port_get(
      self,
    );
  }

  late final _Cronet_QuicHint_alternate_port_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_QuicHintPtr)>>(
          'Cronet_QuicHint_alternate_port_get');
  late final _Cronet_QuicHint_alternate_port_get =
      _Cronet_QuicHint_alternate_port_getPtr.asFunction<
          int Function(Cronet_QuicHintPtr)>();
